--- a/helper.ipynb
+++ b/helper.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import re"
+    "import re\n",
+    "from validation import *"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "outputs": [],
    "source": [
     "with open('get_form.json', 'r') as file:\n",
-    "    query = json.load(file)\n",
+    "    query_dict = json.load(file)\n",
     "    file.close()"
    ]
   },
@@ -54,7 +55,7 @@
     }
    ],
    "source": [
-    "query"
+    "query_dict"
    ]
   },
   {
@@ -67,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
+      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
      ]
     }
    ],
@@ -80,7 +81,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "fb6107d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75554882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['text', 'text', 'text']\n",
+      "{'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validfunc(array[19])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c42e8b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name = super_test\n",
+      "mobile_test = phone\n",
+      "user_mail = email\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in array:\n",
+    "    if i == array[19]:\n",
+    "        for k, v in i.items():\n",
+    "            print(f\"{k} = {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2df111de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array[19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b842b65",
    "metadata": {},
    "outputs": [],
@@ -93,86 +177,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a39d23a5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<re.Match object; span=(0, 16), match='+7-915-654-98-78'>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "re.fullmatch(re_phone, query['mobile'])"
+    "re.fullmatch(re_phone, query_dict['mobile'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c1eebdb0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<re.Match object; span=(0, 5), match='Bobby'>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "re.fullmatch(re_text, query['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1c62d2af",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'his_email'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m re\u001b[38;5;241m.\u001b[39mfullmatch(re_email, \u001b[43mquery\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhis_email\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'his_email'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "re.fullmatch(re_email, query['his_email'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d1702897",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'his_birth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m re\u001b[38;5;241m.\u001b[39mfullmatch(re_date, \u001b[43mquery\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhis_birth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'his_birth'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "re.fullmatch(re_date, query['his_birth'])"
    ]
@@ -189,31 +227,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "92008ca2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "text\n",
-      "phone\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for k, v in query.items():\n",
-    "    if re.fullmatch(re_phone, v):\n",
-    "        print('phone')\n",
-    "    elif re.fullmatch(re_text, v):\n",
-    "        print('text')\n",
-    "    elif re.fullmatch(re_email, v):\n",
-    "        print('email')\n",
-    "    elif re.fullmatch(re_date, v):\n",
-    "        print('date')\n",
-    "    else:\n",
-    "        print('Shit happens!')"
+    "def validation(query):\n",
+    "    val_array = []\n",
+    "    for k, v in query.items():\n",
+    "        if re.fullmatch(re_phone, v):\n",
+    "            val_array.append('phone')\n",
+    "        elif re.fullmatch(re_text, v):\n",
+    "            val_array.append('text')\n",
+    "        elif re.fullmatch(re_email, v):\n",
+    "            val_array.append('email')\n",
+    "        elif re.fullmatch(re_date, v):\n",
+    "            val_array.append('date')\n",
+    "        else:\n",
+    "            val_array.append('Shit happens!')\n",
+    "    print(val_array)\n",
+    "    print(query)\n",
+    "    return len(val_array) == len(query) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7455a291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(query_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992f5dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation(query_dict)"
    ]
   },
   {
@@ -222,14 +276,17 @@
    "id": "6f817681",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for k, v in query.items():\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "testtask_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "testtask_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
