--- a/helper.ipynb
+++ b/helper.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
+      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
      ]
     }
    ],
@@ -81,83 +81,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fb6107d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "75554882",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['text', 'text', 'text']\n",
-      "{'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validfunc(array[19])"
+    "validfunc(array[15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c42e8b40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name = super_test\n",
-      "mobile_test = phone\n",
-      "user_mail = email\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in array:\n",
-    "    if i == array[19]:\n",
+    "    if i == query_dict:\n",
     "        for k, v in i.items():\n",
     "            print(f\"{k} = {v}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2df111de",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "array[19]"
    ]
@@ -298,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
