--- a/helper.ipynb
+++ b/helper.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "c85e6b83",
+   "metadata": {},
+   "source": [
+    "Algorithm:\n",
+    "    input --> processing --> validation F--> output\n",
+    "                                      T--> search F--> field substitution --> output\n",
+    "                                                T--> output\n",
+    "                  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "69194021",
@@ -68,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
+      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
      ]
     }
    ],
@@ -81,128 +93,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fb6107d9",
+   "execution_count": null,
+   "id": "6a629b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07974939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_result = valid(array[15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "567f41b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid(query_dict)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa85c692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_fields = ['text', 'phone']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e1c1c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_keys = list(query_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b6df7f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict(zip(query_keys, query_fields))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6a1233a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def output(query):\n",
+    "    for i in array:\n",
+    "        if list(i) == list(query):\n",
+    "            answer = query\n",
+    "            break\n",
+    "        else:\n",
+    "            continue        \n",
+    "    answer = dict(zip(list(query), valid(query_dict)[1]))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b7b77566",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['text', 'phone']\n",
+      "{'name': 'Bobby', 'mobile': '+7-915-654-98-78'}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "33"
+       "{'name': 'text', '': 'phone'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "75554882",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "validfunc(array[15])"
+    "output(array[18])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42e8b40",
+   "id": "a0e3f08f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in array:\n",
-    "    if i == query_dict:\n",
-    "        for k, v in i.items():\n",
-    "            print(f\"{k} = {v}\")"
+    "list(array[19]) == list(array[19])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2df111de",
+   "id": "ef3f2190",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "array[19]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b842b65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re_text = re.compile(r'\\w+\\s?\\w+')\n",
-    "re_email = re.compile(r'([A-Za-z0-9]+[.-_])*[A-Za-z0-9]+@[A-Za-z0-9-]+(\\.[A-Z|a-z]{2,})+')\n",
-    "re_phone = re.compile(r'\\+\\d*[\\s(-]{0,2}\\d*[\\s)-]{0,2}\\d*[\\s-]?\\d*[\\s-]?\\d*')\n",
-    "re_date = re.compile(r'\\d{1,4}\\W\\d{1,2}\\W\\d{1,4}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a39d23a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.fullmatch(re_phone, query_dict['mobile'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1eebdb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.fullmatch(re_text, query['name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c62d2af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.fullmatch(re_email, query['his_email'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1702897",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.fullmatch(re_date, query['his_birth'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b00785be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array\t bd\t file\t json\t k\t output\t query_dict\t re\t re_date\t \n",
+      "re_email\t re_phone\t re_text\t v\t valid\t \n"
+     ]
+    }
+   ],
    "source": [
     "%who"
    ]
@@ -210,46 +236,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92008ca2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validation(query):\n",
-    "    val_array = []\n",
-    "    for k, v in query.items():\n",
-    "        if re.fullmatch(re_phone, v):\n",
-    "            val_array.append('phone')\n",
-    "        elif re.fullmatch(re_text, v):\n",
-    "            val_array.append('text')\n",
-    "        elif re.fullmatch(re_email, v):\n",
-    "            val_array.append('email')\n",
-    "        elif re.fullmatch(re_date, v):\n",
-    "            val_array.append('date')\n",
-    "        else:\n",
-    "            val_array.append('Shit happens!')\n",
-    "    print(val_array)\n",
-    "    print(query)\n",
-    "    return len(val_array) == len(query) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7455a291",
+   "id": "b21e8cf9",
    "metadata": {},
    "outputs": [],
    "source": [
     "len(query_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "992f5dd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validation(query_dict)"
    ]
   },
   {
@@ -280,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
