--- a/helper.ipynb
+++ b/helper.ipynb
@@ -19,9 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import json\n",
     "import re\n",
-    "from validation import *"
+    "from processtools import *"
    ]
   },
   {
@@ -58,7 +59,10 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'Bobby', 'mobile': '+7-915-654-98-78'}"
+       "{'user_name': 'Pablo',\n",
+       " 'user_date': '15.12.2035',\n",
+       " 'user_email': 'pablo@mit.us',\n",
+       " 'user_phone': '+74351235689'}"
       ]
      },
      "execution_count": 4,
@@ -75,116 +79,123 @@
    "execution_count": 5,
    "id": "883ab473",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = []\n",
+    "for k, v in bd.items():\n",
+    "    array.append(v)\n",
+    "array = np.array(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf930b17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, ['text', 'date', 'email', 'phone'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid(query_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "07974939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation = valid(query_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "166f3ccb",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'}, {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'}, {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'}, {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'}, {'name': 'ewfewfe', 'qweqwweqwe': 'text'}, {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'}, {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''}, {'name': ''}, {'name': ''}, {'name': 'enttest', 'name5': 'text', 'email5': 'email'}, {'name': ''}, {'name': ''}, {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'}, {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': '', '': ''}, {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'}, {'name': ''}, {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'}, {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'}, {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}]\n"
+      "Go on!\n"
      ]
     }
    ],
    "source": [
-    "array = []\n",
-    "for k, v in bd.items():\n",
-    "    array.append(v)\n",
-    "print(array)"
+    "if validation[0] == False:\n",
+    "    print('Stop game!')\n",
+    "else:\n",
+    "    print('Go on!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a629b7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07974939",
+   "execution_count": 9,
+   "id": "e89bb2e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_result = valid(array[15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "567f41b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid(query_dict)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa85c692",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_fields = ['text', 'phone']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e1c1c57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_keys = list(query_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6df7f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict(zip(query_keys, query_fields))"
+    "query_dict['name'] = 'text'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6a1233a3",
+   "id": "4f6730ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'user_name': 'Pablo',\n",
+       " 'user_date': '15.12.2035',\n",
+       " 'user_email': 'pablo@mit.us',\n",
+       " 'user_phone': '+74351235689',\n",
+       " 'name': 'text'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "567f41b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def output(query):\n",
-    "    for i in array:\n",
-    "        if list(i) == list(query):\n",
-    "            answer = query\n",
-    "            break\n",
-    "        else:\n",
-    "            continue        \n",
-    "    answer = dict(zip(list(query), valid(query_dict)[1]))\n",
-    "    return answer"
+    "query_fields = np.array(valid(query_dict)[1])\n",
+    "query_keys = np.array(list(query_dict))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7b77566",
+   "id": "6acaaf7a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['text', 'phone']\n",
-      "{'name': 'Bobby', 'mobile': '+7-915-654-98-78'}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'name': 'text', '': 'phone'}"
+       "array(['name', 'user_date', 'user_email', 'user_name', 'user_phone'],\n",
+       "      dtype='<U10')"
       ]
      },
      "execution_count": 12,
@@ -193,17 +204,148 @@
     }
    ],
    "source": [
-    "output(array[18])"
+    "np.sort(np.array(list(query_dict)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e3f08f",
+   "id": "47e2da69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(array[19]) == list(array[19])"
+    "def finder(x):\n",
+    "    for i in array:\n",
+    "        if np.array_equal(np.sort(np.array(list(i))), np.sort(np.array(list(x)))):\n",
+    "            result = i['name']\n",
+    "            break\n",
+    "        else:\n",
+    "            result = dict(zip(list(x), valid(query_dict)[1]))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "65a92eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Validation'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finder(query_dict, array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc5e5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f487a19b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'},\n",
+       "       {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'},\n",
+       "       {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'},\n",
+       "       {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'},\n",
+       "       {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'},\n",
+       "       {'name': 'ewfewfe', 'qweqwweqwe': 'text'},\n",
+       "       {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'},\n",
+       "       {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''},\n",
+       "       {'name': ''}, {'name': ''},\n",
+       "       {'name': 'enttest', 'name5': 'text', 'email5': 'email'},\n",
+       "       {'name': ''}, {'name': ''},\n",
+       "       {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'},\n",
+       "       {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''},\n",
+       "       {'name': '', '': ''},\n",
+       "       {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'},\n",
+       "       {'name': ''},\n",
+       "       {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'},\n",
+       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
+       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
+       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
+       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
+       "       {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'},\n",
+       "       {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'},\n",
+       "       {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'},\n",
+       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
+       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
+       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
+       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1b1b3520",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'bool' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m finder(array[\u001b[38;5;241m8\u001b[39m], array)\n",
+      "File \u001b[1;32mC:\\py_projects\\testtask\\processtools.py:37\u001b[0m, in \u001b[0;36mfinder\u001b[1;34m(in_dict, bd_array)\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 37\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mlist\u001b[39m(in_dict), valid(in_dict)[\u001b[38;5;241m1\u001b[39m]))\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'bool' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "finder(array[8], array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e243ae1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, ['text', 'text', 'text', 'text'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid(array[3])"
    ]
   },
   {
@@ -212,46 +354,8 @@
    "id": "ef3f2190",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b00785be",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "array\t bd\t file\t json\t k\t output\t query_dict\t re\t re_date\t \n",
-      "re_email\t re_phone\t re_text\t v\t valid\t \n"
-     ]
-    }
-   ],
    "source": [
     "%who"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b21e8cf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(query_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f817681",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, v in query.items():\n",
-    "    "
    ]
   }
  ],
@@ -271,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
