--- a/helper.ipynb
+++ b/helper.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69194021",
    "metadata": {},
    "outputs": [],
@@ -26,96 +26,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "fb074808",
+   "cell_type": "markdown",
+   "id": "541a2ec1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "with open('db.json', 'r') as file:\n",
-    "    bd = json.load(file)\n",
-    "    bd = bd['_default']\n",
-    "    file.close()"
+    "Загружаем бд и запрос "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adde4d15",
+   "id": "fb074808",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('get_form.json', 'r') as file:\n",
-    "    query_dict = json.load(file)\n",
+    "with open('db.json', 'r') as file:\n",
+    "    db = json.load(file)\n",
+    "    db = db['_default']\n",
     "    file.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eff791aa",
+   "id": "adde4d15",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'user_name': 'Pablo',\n",
-       " 'user_date': '15.12.2035',\n",
-       " 'user_email': 'pablo@mit.us',\n",
-       " 'user_phone': '+74351235689'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_date': '12.05.1945', 'user_email': 'kl@bk.ru', 'user_name': 'Kola', 'user_phone': '+7915-245-35-12', 'user_id': 'print'}\n"
+     ]
     }
    ],
    "source": [
-    "query_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "883ab473",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array = []\n",
-    "for k, v in bd.items():\n",
-    "    array.append(v)\n",
-    "array = np.array(array)"
+    "with open('get_form.json', 'r') as file:\n",
+    "    query_dict = json.load(file)\n",
+    "    file.close()\n",
+    "\n",
+    "print(query_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cf930b17",
+   "id": "741d6df3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(True, ['text', 'date', 'email', 'phone'])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "valid(query_dict)"
+    "test_dict = {'id': '12345', 'user_name': 'Petrov', 'birth': '12.12.1945', 'email': 'email@mail.ru', 'name': 'text'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bec1631a",
+   "metadata": {},
+   "source": [
+    "Создаём np.array для удобства доступа шаблонов"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "07974939",
+   "id": "883ab473",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation = valid(query_dict)"
+    "array = []\n",
+    "for k, v in db.items():\n",
+    "    array.append(v)\n",
+    "array = np.array(array)"
    ]
   },
   {
@@ -128,15 +109,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Go on!\n"
+      "Go on!\n",
+      "Validation result: (True, ['date', 'email', 'text', 'phone', 'text'])\n"
      ]
     }
    ],
    "source": [
+    "validation = valid(query_dict)\n",
     "if validation[0] == False:\n",
     "    print('Stop game!')\n",
     "else:\n",
-    "    print('Go on!')"
+    "    print('Go on!')\n",
+    "\n",
+    "print(f'Validation result: {validation}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "802a4d60",
+   "metadata": {},
+   "source": [
+    "Проверяем наличие поля name, если отсутствует добавляем"
    ]
   },
   {
@@ -144,158 +137,86 @@
    "execution_count": 9,
    "id": "e89bb2e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "field: 'name' has been added.\n",
+      "{'user_date': '12.05.1945', 'user_email': 'kl@bk.ru', 'user_name': 'Kola', 'user_phone': '+7915-245-35-12', 'user_id': 'print', 'name': 'text'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query_dict['name'] = 'text'"
+    "if 'name' in query_dict:\n",
+    "    print('OK')\n",
+    "else:\n",
+    "    query_dict['name'] = 'text'\n",
+    "    print('field: \\'name\\' has been added.')\n",
+    "print(query_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4f6730ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'user_name': 'Pablo',\n",
-       " 'user_date': '15.12.2035',\n",
-       " 'user_email': 'pablo@mit.us',\n",
-       " 'user_phone': '+74351235689',\n",
-       " 'name': 'text'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "567f41b2",
+   "id": "4840cffc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_fields = np.array(valid(query_dict)[1])\n",
-    "query_keys = np.array(list(query_dict))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6acaaf7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['name', 'user_date', 'user_email', 'user_name', 'user_phone'],\n",
-       "      dtype='<U10')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sort(np.array(list(query_dict)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47e2da69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def finder(x):\n",
-    "    for i in array:\n",
-    "        if np.array_equal(np.sort(np.array(list(i))), np.sort(np.array(list(x)))):\n",
-    "            result = i['name']\n",
+    "def search(in_dict, db_array):\n",
+    "    for item in range(len(db_array)):\n",
+    "        if np.all(np.isin(np.array(list(db_array[item])), np.array(list(in_dict)))):\n",
+    "#             np.array_equal(np.sort(np.array(list(item))), np.sort(np.array(list(in_dict)))):\n",
+    "            result = db_array[item]['name']\n",
     "            break\n",
     "        else:\n",
-    "            result = dict(zip(list(x), valid(query_dict)[1]))\n",
+    "            result = dict(zip(list(in_dict), valid(in_dict)[1]))\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "65a92eab",
+   "execution_count": 18,
+   "id": "eefcdb21",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Validation'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation\n"
+     ]
     }
    ],
    "source": [
-    "finder(query_dict, array)"
+    "answer = search(query_dict, array)\n",
+    "if type(answer) is dict:\n",
+    "    del answer['name']\n",
+    "print(answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbc5e5ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f487a19b",
+   "execution_count": 13,
+   "id": "1917d7ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([{'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'},\n",
-       "       {'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'},\n",
-       "       {'name': 'Form template name', 'field_name_1': 'email', 'field_name_2': 'phone', 'field_name_3': 'date'},\n",
-       "       {'name': 'registration form', 'login': 'text', 'password': 'text', 'email': 'email'},\n",
-       "       {'name': 'registration form', 'login': '', 'password': 'text', 'email': 'email'},\n",
-       "       {'name': 'ewfewfe', 'qweqwweqwe': 'text'},\n",
-       "       {'name': 'fin test!@#@!#', 'test1': 'phone', 'test2': 'text'},\n",
-       "       {'name': '43r34r34r34r3', 'zzzzzzzzzzzzz': 'phone'}, {'name': ''},\n",
-       "       {'name': ''}, {'name': ''},\n",
-       "       {'name': 'enttest', 'name5': 'text', 'email5': 'email'},\n",
-       "       {'name': ''}, {'name': ''},\n",
+       "array([{'name': 'test form', 'user_name': 'text', 'user_birth': 'date', 'user_email': 'email'},\n",
+       "       {'name': 'Form template name', 'field_email': 'email', 'field_phone': 'phone', 'field_date': 'date'},\n",
+       "       {'name': 'registration form', 'login': 'phone', 'password': 'text', 'email': 'email'},\n",
+       "       {'name': 'registration form 2.0', 'login': 'email', 'password': 'text', 'mobile': 'phone'},\n",
+       "       {'name': 'verification', 'personal_login': 'email', 'password': 'text'},\n",
        "       {'name': 'template_1', 'user_name': 'text', 'user_mobile': 'phone', 'user_email': 'email'},\n",
-       "       {'name': ''}, {'name': '', '': ''}, {'name': '', '': ''},\n",
-       "       {'name': '', '': ''},\n",
-       "       {'name': 'super_test', 'mobile_test': 'phone', 'user_mail': 'email'},\n",
-       "       {'name': ''},\n",
-       "       {'name': '123', 'qwerty': 'text', 'shmerty': 'phone'},\n",
-       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
-       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
-       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
-       "       {'name': '12345', 'qwerty_125': 'text', 'shmerty_125': 'phone'},\n",
-       "       {'name': '1234567', 'qwerty_125000': 'text', 'shmerty_125000': 'phone'},\n",
+       "       {'name': 'test_template', 'mobile_test': 'phone', 'user_mail': 'email', 'user_id': 'date'},\n",
        "       {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'},\n",
-       "       {'name': 'Validation', 'user_name': 'text', 'user_email': 'email', 'user_phone': 'phone', 'user_date': 'date'},\n",
-       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
-       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
-       "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'},\n",
        "       {'name': 'register', 'body_name': 'text', 'his_email': 'email', 'his_phone': 'phone', 'his_birth': 'date'}],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,46 +227,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1b1b3520",
+   "execution_count": 14,
+   "id": "a278f798",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'bool' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m finder(array[\u001b[38;5;241m8\u001b[39m], array)\n",
-      "File \u001b[1;32mC:\\py_projects\\testtask\\processtools.py:37\u001b[0m, in \u001b[0;36mfinder\u001b[1;34m(in_dict, bd_array)\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 37\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mlist\u001b[39m(in_dict), valid(in_dict)[\u001b[38;5;241m1\u001b[39m]))\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'bool' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
      ]
     }
    ],
    "source": [
-    "finder(array[8], array)"
+    "for i in range(len(array)):\n",
+    "    print(i)\n",
+    "    if np.all(np.isin(np.array(list(array[i])), np.array(list(test_dict)))):\n",
+    "        print('good')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e243ae1d",
+   "execution_count": 16,
+   "id": "a0d2b17e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, ['text', 'text', 'text', 'text'])"
+       "array([ True, False, False, False, False])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valid(array[3])"
+    "np.isin(np.array(list(array[i])), np.array(list(test_dict)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "497a5fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820be99e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "567f41b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_fields = np.array(valid(query_dict)[1])\n",
+    "query_keys = np.array(list(query_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6acaaf7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sort(np.array(list(query_dict)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e60e7be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c0fdc80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65a92eab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc5e5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid(array[8])"
    ]
   },
   {
@@ -357,6 +357,38 @@
    "source": [
     "%who"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0185d1c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is email\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall(r\"(\\w+@[a-z]+\\.[a-z]{2,})|(\\+[\\d](\\s|-|)(\\(|)\\d{3}(\\)|)[0-9\\-]+$)|(\\d{2,4}(-|\\.)\\d{2}(-|\\.)\\d{2,4})|(.*)\", \"asd@asd.ru\")\n",
+    "if result[0][0]:\n",
+    "    print('is email')\n",
+    "elif result[0][5]:\n",
+    "    print('is date')\n",
+    "else:\n",
+    "    print('dont know')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2382d93a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -375,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
